[tool.poetry]
name = "lvm-i-focus"
version = "0.1.0"
description = ""
authors = ["Nick Konidaris <nick.konidaris@gmail.com>"]
readme = "README.md"
packages = [{include = "lvm_i_focus"}]

[tool.poetry.dependencies]
python = "^3.10"
lvmi_lab = "0.1.0"
astropy = "^5.3.0"
matplotlib = "^3.7.0"
scikit-learn= "^1.3.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
